# minimal_telegram_bot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  first_response.pickle  pyproject.toml  second_response.pickle  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
minimal_telegram_bot/: __init__.py  cli.py  minimal_telegram_bot.py
tests/: __init__.py  test_minimal_telegram_bot.py
